--- a/agro_app/templates/agro_app/html/about_us.html
+++ b/agro_app/templates/agro_app/html/about_us.html
@@ -31,8 +31,13 @@ h7{
     font-size: medium;
 }
 .div-size{
-    height: 500px;
+    height: auto;
     width: 100%;
+
+}
+.div-size h7 {
+    font-size: 30px;
+    font-weight: 250;
 }
 </style>
 <body class="bgimage">
@@ -56,9 +61,7 @@ h7{
             By fostering resilience and independence, we aim to transform farming into a thriving and dignified
             livelihood for every smallholder who visits our platform.
 
-        </h7>
-        <div id="page">
-
+        
 
         </div>
         
@@ -81,7 +84,7 @@ h7{
             </div>
             <div  class="div-size">
         <h2 style="text-align: center;;">Our goal</h2>
-        <h7 style="margin-top: 0px; line-height: 20px;" >
+        <h7  >
             At agro_fresh, we are committed to giving small farmers control over their livelihoods by connecting them
             directly to buyers—without brokerage, middlemen, or hidden fees.
             Our app is built to:<br>
