--- a/agro_app/static/agro_app/css/style.css
+++ b/agro_app/static/agro_app/css/style.css
@@ -14,8 +14,8 @@ body,html
 box-sizing: border-box;
 
 }
-#page{
+/* #page{
     height: 100px;
     width: 100px;
     background-color: red;
-}
+} */
