--- a/agro_app/templates/agro_app/farmer/farmer_registration.html
+++ b/agro_app/templates/agro_app/farmer/farmer_registration.html
@@ -1,83 +1,89 @@
 <!DOCTYPE html>
-{%load static%}
+{% load static %}
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Regestration</title>
-    {% include 'agro_app/common/common_css.html'%}
+    <title>User Registration</title>
+    {% include 'agro_app/common/common_css.html' %}
     <style>
         .bgimage1 {
             background-image: url("{% static 'agro_app/images/rege_img.jpg' %}");
+            background-size: cover;
+            background-position: center;
+            min-height: 100vh;
+        }
+
+        .form-container {
+            background: rgba(255, 255, 255, 0.9);
+            padding: 2rem;
+            border-radius: 12px;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        .form-title img {
+            max-width: 200px;
+            width: 100%;
+            height: auto;
         }
     </style>
 </head>
 
 <body class="bgimage1">
-    {%include 'agro_app/common/header.html'%}
-    <div class="main-div">
-        <div style="text-align: center;">
-            <img src="{%static 'agro_app/images/regimg.gif' %}" alt="">
+    {% include 'agro_app/common/header.html' %}
+
+    <div class="container py-5">
+        <div class="text-center form-title mb-4">
+            <img src="{% static 'agro_app/images/regimg.gif' %}" alt="Registration">
         </div>
 
-        <form  action="/registration/" method="post" enctype="multipart/form-data">
+        <div class="row justify-content-center">
+            <div class="col-lg-6 col-md-8 col-12">
+                <form action="/registration/" method="post" enctype="multipart/form-data" class="form-container">
+                    {% csrf_token %}
 
-            {%csrf_token%}
+                    <div class="mb-3">
+                        <input type="email" class="form-control" placeholder="Enter email" name="email" required>
+                    </div>
 
-            <div style="margin-left: 100px;margin-right: 100px;margin-top: 0%;padding: 8%;">
-                <div class="input-group mb-3">
+                    <div class="mb-3">
+                        <input type="password" class="form-control" placeholder="Enter password" name="password" required>
+                    </div>
 
-                    <input type="text" class="form-control" placeholder="enter email here" aria-label="enter email here"
-                        aria-describedby="basic-addon1" name="email">
-                </div>
-                <div class="input-group mb-3">
+                    <div class="mb-3">
+                        <input type="text" class="form-control" placeholder="Enter full name" name="name" required>
+                    </div>
 
-                    <input type="password" class="form-control" placeholder="enter password here"
-                        aria-label="enter password here" aria-describedby="basic-addon1" name="password">
-                </div>
-                <div class="input-group mb-3">
+                    <div class="mb-3">
+                        <input type="tel" class="form-control" placeholder="Enter phone number" name="phone_number" required>
+                    </div>
 
-                    <input type="text" class="form-control" placeholder="enter name here" aria-label="enter name here"
-                        aria-describedby="basic-addon1" name="name">
-                </div>
-                <div class="input-group mb-3">
+                    <div class="mb-3">
+                        <input type="text" class="form-control" placeholder="Enter your city" name="city">
+                    </div>
 
-                    <input type="text" class="form-control" placeholder="enter phone number"
-                        aria-label="enter phone number here" aria-describedby="basic-addon1" name="phone_number">
-                </div>
-                 <div class="input-group mb-3">
+                    <div class="mb-3">
+                        <input type="text" class="form-control" placeholder="Enter your address" name="address">
+                    </div>
 
-                    <input type="text" class="form-control" placeholder="enter your city"
-                        aria-label="enter phone number here" aria-describedby="basic-addon1" name="city">
-                </div>
-                 <div class="input-group mb-3">
+                    <div class="mb-3">
+                        <input type="file" class="form-control" id="inputGroupFile02" name="photo">
+                    </div>
 
-                    <input type="text" class="form-control" placeholder="enter your address"
-                        aria-label="enter phone number here" aria-describedby="basic-addon1" name="address">
-                </div>
-                <div class="input-group mb-3">
-                    <input type="file" class="form-control" id="inputGroupFile02" name="photo">
-                    <label class="input-group-text" for="inputGroupFile02" >Upload photo</label>
-                </div>
-                <div style="text-align: center;">
-                    <button type="submit" class="btn btn-success" ;>Submit</button>
-                </div>
-
-
-
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-success px-4">Submit</button>
+                    </div>
+                </form>
             </div>
-
-        </form>
-
+        </div>
     </div>
+
     {% include 'agro_app/common/footer.html' %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
-
-
 </body>
 
 </html>
